--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,8 @@
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
-    "react-native-secure-storage": "^0.1.2"
+    "react-native-secure-storage": "^0.1.2",
+    "react-native-vector-icons": "^7.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
